# Task

./: CMakeLists.txt
src/: main.cpp
tests/: test_queue_element.cpp
tests/mocks/: mock_queue_element.cpp  mock_queue_element.h  stub.h
